[package]
name = "nightraven-macros"
version = "0.1.3"
edition = "2021"
authors = ["Shadorain <jordanf7517@gmail.com>"]
description = "A blazingly fast procedural macro in Rust for nesting types ergonimically! The bird of the shadows has found its nest!"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shadorain/NightRaven"
keywords = ["nested", "types", "derive"]
categories = ["derive", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.69"
